revert before test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <form id="calculator">
                 <div id="output">
                     <label>Desired Output</label>
-                    <input type="number" required step="any"> mm11
+                    <input type="number" required step="any"> mm
                 </div>
                 
                 <div>
